# SlideGen

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.cursor/rules/: code-style.mdc  python-packages-manager.mdc
components/shapes/: shapes.json
slidegen/: base.py  celery_app.py  celery_config.py  gen_env_sample.py  server.py
slidegen/api/: deps.py  main.py
slidegen/api/demo/: sse.py  websocket.py
slidegen/api/routers/: login.py  user.py
slidegen/api/routes/: auth.py
slidegen/common/: __init__.py  log.py  security.py  user_center.py
slidegen/common/patch/: json_decoder.py  sqlalchemy_pagination.py
slidegen/config/: __init__.py  celery_config.py  conf.py  const.py
slidegen/consts/: __init__.py
slidegen/contexts/: __init__.py  context.py  schema.py
slidegen/controller/: embedding_factory.py  llm_factory.py
slidegen/core/: __init__.py  __init__.pyi  conf.py  context.py  schema.py  security.py
slidegen/core/docparse/: __init__.py  docparser.py
slidegen/core/docparse/markdown_parser/: __init__.py  _typing.py  elements.py
slidegen/core/docparse/parsers/: __init__.py  _markdownify.py  base.py  docx_parser.py  excel_parser.py  html_parser.py  pdf_parser.py
slidegen/core/engine/: __init__.py  rdb.py  redis_client.py
slidegen/core/exception/: __init__.py  base.py  custom_exception.py
slidegen/core/middleware/: __init__.py  exception.py
slidegen/core/pptgen/: components.py  pptgen.py  pptpages.py  utils.py
slidegen/crud/: __init__.py  user.py
slidegen/engine/: database.py  rdb.py  redis.py  redis_client.py
slidegen/exception/: __init__.py  base.py  custom_exception.py  error_code.py
slidegen/middleware/: __init__.py  cors.py  exception.py  startup.py
slidegen/model/: base.py
slidegen/models/: __init__.py  base.py  embedding_config.py  image_asset.py  llm_config.py  task.py  user.py
slidegen/schemas/: __init__.py  base.py  base_schemas.py  embedding_config.py  file_upload.py  gen_request.py  image_prompt.py  llm_config.py  page.py  response_schema.py  user.py
slidegen/tests/: test_components.py
slidegen/util/: sm.py  time.py
slidegen/utils/: __init__.py  file_manager.py  time.py  verify.py
slidegen/view/: __init__.py
slidegen/view/api/example/: prompt.py
slidegen/view/core/: __init__.py  base_view.py  decorator.py  response_schema.py
slidegen/view/om/: healthcheck.py
slidegen/workflows/: slidegen.py
slidegen/workflows/docparse/: __init__.py  docparser.py  docreader.py  file_processor.py
slidegen/workflows/docparse/markdown_parser/: __init__.py
slidegen/workflows/docparse/parsers/: __init__.py  _markdownify.py  base.py  docx_parser.py  excel_parser.py  html_parser.py  markdown_parser.py
slidegen/workflows/docparse/reader/: __init__.py  docx_reader.py  excel_reader.py  pdf_reader.py  text_reader.py
slidegen/workflows/pptgen/: __init__.py  components.py  icon_searcher.py  pages.py  pptgen.py  pptpages.py  utils.py
slidegen/workflows/presentation/: __init__.py  icon_searcher.py  image_generator.py  md_converter.py  pages.py
slidegen/workflows/utils/: download_helpers.py  get_env.py  image_provider.py  slide_utils.py
test/: test_components.py  test_parsers.py  test_slidegen.py
test/pdf_parse_test/: pdf_test.py  test_conversion.py
